Fixes #1 by adding extra padding to centered wrapper when there is a scroll bar present

--- a/_sass/minima/_base.scss
+++ b/_sass/minima/_base.scss
@@ -123,14 +123,15 @@ pre {
   margin-right: auto;
   margin-left: auto;
   padding-right: $spacing-unit;
-  padding-left: $spacing-unit;
+
+  padding-left: calc(100vw - 100% + #{$spacing-unit});
   @extend %clearfix;
 
   @include media-query($on-laptop) {
     max-width: -webkit-calc(#{$content-width} - (#{$spacing-unit}));
     max-width:         calc(#{$content-width} - (#{$spacing-unit}));
     padding-right: $spacing-unit / 2;
-    padding-left: $spacing-unit / 2;
+    padding-left: calc(100vw - 100% + (#{$spacing-unit} / 2));
   }
 }
 
